Bug 1250669. Don't init dwrite fonts if content device creation fails. r=dvander a=lizzard

MozReview-Commit-ID: CyA7FzpInlS